# advent-of-code

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  advent-of-code2018.cabal
2018/day1/: ChronalCalibration.hs
2018/day4/: ReposeRecord.hs
2018/day5/: AlchemicalReduction.hs
2019/day1/: day1.adb  puzzle.adb
2019/day2/: build.gpr  puzzle.adb
2019/day3/: puzzle.adb
2019/day4/: puzzle.adb
2020/: .gitattributes  .gitignore  Cargo.toml
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day10/: Cargo.toml
2020/day10/src/: main.rs
2020/day11/: Cargo.toml
2020/day11/src/: main.rs
2020/day12/: Cargo.toml
2020/day12/src/: main.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
2020/day14/: Cargo.toml
2020/day14/src/: main.rs
2020/day2/: Cargo.toml
2020/day2/src/: main.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs
2020/day5/: Cargo.toml
2020/day5/src/: main.rs
2020/day6/: Cargo.toml
2020/day6/src/: main.rs
2020/day7/: Cargo.toml
2020/day7/src/: main.rs
2020/day8/: Cargo.toml
2020/day8/src/: main.rs
2020/day9/: Cargo.toml
2020/day9/src/: main.rs
day1/: ChronalCalibration.hs
day2/: InventoryManagementSystem.hs
day3/: NoMatterHowYouSliceIt.hs
day4/: ReposeRecord.hs
day5/: AlchemicalReduction.hs
day6/: ChronalCoordinates.hs
