cabal-version: >=1.10
name: advent-of-code2018
version: 0.1.0.0
maintainer: t97steven@gmail.com
author: Steven Tomlinson
build-type: Simple

library
    exposed-modules:
        ChronalCalibration,
        InventoryManagementSystem,
        NoMatterHowYouSliceIt,
        ReposeRecord,
        AlchemicalReduction
    build-depends:
        base >=4.0,
        split -any,
        containers -any
    hs-source-dirs: day1, day2, day3, day4, day5
    default-language: Haskell2010
